# router

./: .gitignore  Cargo.toml  LICENSE_MIT  Makefile.toml  PROFILING.md  README.md  RELEASE.md  bacon.toml  config.dev.yaml  dhat-heap.json  graphql-over-http.test.js  install.sh  knope.toml  package-lock.json  package.json  playground.sh  release-plz.toml  renovate.json  router.config.yaml  run-gw-for-audit.sh  supergraph.graphql
bench/coprocessor/: Cargo.toml  main.rs
bench/goose-benchmark/: Cargo.toml
bench/goose-benchmark/src/: main.rs
bench/subgraphs/: CHANGELOG.md  Cargo.toml  accounts.rs  books.rs  graphql_with_sse.rs  graphql_with_subscriptions.rs  inventory.rs  lib.rs  main.rs  monolith.rs  products.rs  reviews.rs
e2e/: Cargo.toml  jwks.rsa512.alg.json  jwks.rsa512.json  jwks.rsa512.pem  persisted_docs.json  supergraph-authz.graphql  supergraph-introspection-extended.graphql  supergraph-router-235.graphql  supergraph.graphql  supergraph_demand_control.graphql
e2e/configs/: body_limit.yaml  circuit_breaker_global.router.yaml  circuit_breaker_mixed.router.yaml  circuit_breaker_per_subgraph.router.yaml  deprecated_input_values.yaml  disable_introspection_env.yaml  disable_introspection_header.yaml  env_vars.router.yaml  error_handling.router.yaml  header_propagation.router.yaml  hmac_forward.router.yaml  jwt_auth.directives.reject.router.yaml  jwt_auth.directives.router.yaml  jwt_auth.router.yaml  jwt_auth_audience.router.yaml  jwt_auth_forward.router.yaml  jwt_auth_header_expression.router.yaml  jwt_auth_issuer.router.yaml  jwt_auth_jwk_with_alg.router.yaml  timeout_per_subgraph_dynamic.router.yaml  timeout_per_subgraph_static.router.yaml
e2e/configs/override_subgraph_urls/: override_dynamic_header.router.yaml  override_static.router.yaml
e2e/configs/persisted_documents/: apollo_spec.yaml  expr_allow_arbitrary.yaml  expr_spec.yaml  file_source.yaml  url_spec.yaml
e2e/fixtures/demand_control/: basic_mutation.graphql  basic_supergraph_schema.graphql  custom_cost_schema.graphql  federated_ships_fragment_query.graphql  federated_ships_required_query.graphql  federated_ships_schema.graphql
e2e/src/: authorization_directives_filter.rs  authorization_directives_reject.rs  body_limit.rs  cache_control.rs  circuit_breaker.rs  conditional_directives.rs  demand_control.rs  deprecated_input_values.rs  disable_introspection.rs  entity_batching.rs  env_vars.rs  error_handling.rs  error_masking.rs  extensions_propagation.rs  file_supergraph.rs  header_propagation.rs  hive_cdn_supergraph.rs  hmac.rs  http.rs  http2.rs  http_callback.rs  introspection.rs  jwt.rs  laboratory.rs  lib.rs  max_aliases.rs  max_depth.rs  max_directives.rs  max_tokens.rs  operation_name.rs  override_subgraph_urls.rs  persisted_documents.rs  probes.rs  representation_cache.rs  reproductions.rs  request_deduplication.rs  router_timeout.rs  subscription_plugin_hooks.rs  subscriptions.rs  supergraph-deprecated_input_values.graphql  (+7 more)
e2e/src/coprocessor/: context.rs  failures.rs  graphql_analysis.rs  graphql_request.rs  graphql_response.rs  mod.rs  router_request.rs  router_response.rs  unix_domain_socket.rs
e2e/src/demand_control/: actual_cost.rs  common.rs  enforcement.rs  estimator.rs  extensions.rs  metrics.rs  mod.rs  subgraph_budgets.rs
e2e/src/demand_control_parity/: actual_cost_modes.rs  common.rs  estimated_cost.rs  exceeds_max.rs  exceeds_max_with_subgraph_config.rs  list_size_inheritance.rs  measure_mode.rs  mod.rs  subgraph_budget.rs  within_max.rs
e2e/src/issues/: mod.rs  supergraph.1070.graphql  supergraph.1099.graphql  supergraph.1164-with-union.graphql  supergraph.1166-disjoint-fragments.graphql  supergraph.880.graphql  supergraph.966.graphql  supergraph.batch-null-entity.graphql  supergraph.distributed-union.graphql  supergraph.escape-string-arguments.graphql  (+7 more)
e2e/src/storage/: s3.rs  (+1 more)
lib/executor/: CHANGELOG.md  Cargo.toml  README.md
lib/graphql-tools/: CHANGELOG.md  Cargo.toml
lib/hive-console-sdk/: CHANGELOG.md  Cargo.toml  usage-report-v2.schema.json
lib/internal/: CHANGELOG.md  Cargo.toml
lib/node-addon/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.js  check.js  index.cjs  index.d.ts  index.js  package-lock.json  package.json  tests.js  tests.snapshot
lib/query-plan-executor/: Cargo.toml
lib/query-planner/: CHANGELOG.md  Cargo.toml  README.md  test.graph
lib/router-config/: CHANGELOG.md  Cargo.toml  README.md
lib/telemetry/: Cargo.toml
plugin_examples/: Cargo.toml
plugin_examples/.cargo/: config.toml  nextest.toml
plugin_examples/apollo_sandbox/: Cargo.toml  router.config.yaml
plugin_examples/apq/: Cargo.toml  router.config.yaml
plugin_examples/async_auth/: Cargo.toml  README.md  allowed_clients.json  router.config.yaml
plugin_examples/context_data/: Cargo.toml  README.md  router.config.yaml
plugin_examples/error_mapping/: Cargo.toml  README.md  router.config.yaml
plugin_examples/feature_flags/: Cargo.toml  router.config.yaml  supergraph.graphql
plugin_examples/field_nulling/: Cargo.toml  router.config.yaml
plugin_examples/forbid_anonymous_operations/: Cargo.toml  README.md  router.config.yaml
plugin_examples/incoming_request_deduplication/: Cargo.toml  README.md  router.config.yaml
plugin_examples/jwt_cookie/: Cargo.toml  README.md  router.config.yaml
plugin_examples/multipart/: Cargo.toml  router.config.yaml
plugin_examples/non_standard_request/: Cargo.toml  README.md  router.config.yaml
plugin_examples/one_of/: Cargo.toml  router.config.yaml
plugin_examples/plugin_template/: Cargo.toml  router.config.yaml
plugin_examples/progressive_override_launchdarkly/: Cargo.toml  README.md  router.config.yaml
plugin_examples/propagate_status_code/: Cargo.toml  README.md  router.config.yaml
plugin_examples/replace_schema/: Cargo.toml  router.config.yaml
plugin_examples/response_cache/: Cargo.toml  router.config.yaml
plugin_examples/root_field_limit/: Cargo.toml  router.config.yaml
plugin_examples/subgraph_response_cache/: Cargo.toml  router.config.yaml
plugin_examples/usage_reporting/: Cargo.toml  router.config.yaml
(+1183 files in other folders)
