[workspace]
members = [
  "lib/internal",
  "lib/query-planner",
  "lib/router-config",
  "lib/executor",
  "lib/node-addon",
  "lib/graphql-tools",
  "lib/hive-console-sdk",
  "bin/dev-cli",
  "bin/router",
  "e2e",
  "bench/subgraphs",
]
resolver = "2"
default-members = ["bin/router"]

[profile.dev]
debug = 2

# See PROFILING.md
[profile.profiling]
inherits = "release"
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sonic-rs = "0.5.3"
insta = { version = "1.42.1" }
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
lazy_static = "1.5.0"
dashmap = { version = "6.0.0" }
async-trait = "0.1.88"
futures = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0" }
thiserror = "2.0.14"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16" }
rand = "0.9.2"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
ntex = { version = "2", features = ["tokio"] }
tonic = { version = "0.14.2", features = ["tls-aws-lc"] }
reqwest = { version = "0.12.23", default-features = false, features = ["http2", "rustls-tls"] }
reqwest-retry = "0.8.0"
reqwest-middleware = "0.4.2"
rustls = { version = "0.23.36", default-features = false }
retry-policies = "0.5.1"
vrl = { version = "0.29.0", features = ["compiler", "parser", "value", "diagnostic", "stdlib", "core"] }
regex-automata = "0.4.10"
bytes = "1.10.1"
ahash = "0.8.12"
anyhow = "1.0.100"
moka = { version = "0.12.11", features = ["future", "sync"] }
hyper-rustls = { version = "0.27.7", features = ["http1", "http2"] }
combine = "4.6.6"
strum = { version = "0.27.2", features = ["derive"] }

# Telemetry
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-prometheus = "0.29.1"
opentelemetry-http = { version = "0.31.0", default-features = false, features = ["internal-logs", "reqwest-blocking", "reqwest-rustls"]}
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["reqwest-blocking-client", "reqwest-rustls", "http-proto", "internal-logs", "logs", "metrics", "trace"] }
opentelemetry-proto = "0.31.0"
prost = "0.14.2"
opentelemetry-stdout = "0.31.0"
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-jaeger-propagator = "0.31.0"
opentelemetry-zipkin = { version = "0.31.0", default-features = false, features=["reqwest-rustls", "reqwest-blocking-client"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "time",
  "json",
] }
tracing-tree = "0.4.0"
