[package]
name = "e2e"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tokio-stream = "0.1"
ntex = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
sonic-rs = { workspace = true }
lazy_static = { workspace = true }
jsonwebtoken = { workspace = true }
insta = { workspace = true }
reqwest = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["http-proto"] }
opentelemetry-proto = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
http = { workspace = true }
dashmap = { workspace = true }
axum = "0.8.4"
bytes = "1.10.1"

hive-router = { path = "../bin/router", features = ["testing"] }
hive-router-config = { path = "../lib/router-config" }
hive-router-internal = { path = "../lib/internal" }
subgraphs = { path = "../bench/subgraphs" }

mockito = { workspace = true }
tempfile = "3.23.0"
hex = "0.4"
tiny_http = "0.12"
