[workspace]
resolver = "2"
members = [
  "apollo_sandbox",
  "apq",
  "async_auth",
  "context_data",
  "forbid_anonymous_operations",
  "multipart",
  "one_of",
  "propagate_status_code",
  "response_cache",
  "root_field_limit",
  "subgraph_response_cache",
  "usage_reporting",
  "jwt_cookie",
  "feature_flags",
  "progressive_override_launchdarkly",
  "non_standard_request",
  "incoming_request_deduplication",
  "error_mapping"
]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
http = "1.3.1"
reqwest = { version = "0.12.23", default-features = false, features = ["http2", "rustls-tls"] }
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
futures-util = "0.3.31"
