[package]
name = "goose-benchmark"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
goose = "0.18.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
humantime = { workspace = true }
xxhash-rust = { workspace = true }
bytes = { workspace = true }
url = "2.5.7"
