[package]
name = "subgraphs"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "subgraphs"
path = "main.rs"

[lib]
name = "subgraphs"
path = "lib.rs"

[dependencies]
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
axum = "0.8.4"
lazy_static = "1.5.0"
rand = "0.9.1"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
