[package]
name = "subgraphs"
version = "0.0.1"
edition = "2021"
publish = false

[[bin]]
name = "subgraphs"
path = "main.rs"

[lib]
name = "subgraphs"
path = "lib.rs"

[dependencies]
lazy_static = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }

async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
axum = "0.8.4"
