[package]
name = "hive-router-plan-executor"
version = "6.2.2"
edition = "2021"
description = "GraphQL query planner executor for Federation specification"
license = "MIT"
publish = true
repository = "https://github.com/graphql-hive/router"
homepage = "https://github.com/graphql-hive/router"
authors = ["The Guild"]

[lib]

[dependencies]
hive-router-query-planner = { path = "../query-planner", version = "2.1.3" }
hive-router-config = { path = "../router-config", version = "0.0.15" }
hive-router-internal = { path = "../internal", version = "0.0.1" }

graphql-parser = { workspace = true }
graphql-tools = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["client"] }
serde = { workspace = true }
sonic-rs = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
xxhash-rust = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
dashmap = { workspace = true }

regex-automata = { workspace = true }

ahash = "0.8.12"
strum = { version = "0.27.2", features = ["derive"] }
ntex-http = "0.1.15"

hyper-tls = { version = "0.6.0", features = ["vendored"] }
hyper-util = { version = "0.1.16", features = [
  "client",
  "client-legacy",
  "http1",
  "http2",
  "tokio",
] }
bytes = "1.10.1"
itoa = "1.0.15"
ryu = "1.0.20"
indexmap = "2.10.0"
bumpalo = "3.19.0"

[dev-dependencies]
subgraphs = { path = "../../bench/subgraphs" }
criterion = { workspace = true }
tokio = { workspace = true }
insta = { workspace = true }

[[bench]]
name = "executor_benches"
harness = false
