[package]
name = "hive-router-plan-executor"
version = "6.3.5"
edition = "2021"
description = "GraphQL query planner executor for Federation specification"
license = "MIT"
publish = true
repository = "https://github.com/graphql-hive/router"
homepage = "https://github.com/graphql-hive/router"
authors = ["The Guild"]

[lib]

[dependencies]
hive-router-query-planner = { path = "../query-planner", version = "2.1.7" }
hive-router-config = { path = "../router-config", version = "0.0.18" }
hive-router-internal = { path = "../internal", version = "0.0.7" }
graphql-tools =  { path = "../graphql-tools", version = "0.5.0" }

async-trait = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["client"] }
serde = { workspace = true }
sonic-rs = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
xxhash-rust = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
dashmap = { workspace = true }

regex-automata = { workspace = true }

ahash = { workspace = true }
strum = { workspace = true }
ntex = { workspace = true }
hyper-rustls = { workspace = true}

hyper-util = { version = "0.1.16", features = [
  "client",
  "client-legacy",
  "http1",
  "http2",
  "tokio",
] }
bytes = { workspace = true }
itoa = "1.0.15"
ryu = "1.0.20"
indexmap = "2.10.0"
bumpalo = "3.19.0"
sonic-simd = "0.1.2"
async-stream = "0.3.6"
futures-util = "0.3.31"

[dev-dependencies]
subgraphs = { path = "../../bench/subgraphs" }
criterion = { workspace = true }
tokio = { workspace = true }
insta = { workspace = true }

[[bench]]
name = "executor_benches"
harness = false
