[package]
name = "hive-console-sdk"
edition = "2021"
license = "MIT"
publish = true
version = "0.3.6"
description = "Rust SDK for Hive Console"
repository = "https://github.com/graphql-hive/router"
homepage = "https://github.com/graphql-hive/router"
authors = ["The Guild"]

[dependencies]
graphql-tools =  { path = "../graphql-tools", version = "0.5.1" }

async-trait = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, features = [ "blocking" ] }
reqwest-retry = { workspace = true }
reqwest-middleware = { workspace = true, features = ["json"]}
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
md5 = "0.8.0"
serde_json = { workspace = true }
moka = { workspace = true }
sha2 = { version = "0.10.8", features = ["std"] }
tokio-util = { workspace = true }
regex-automata = { workspace = true }
retry-policies = { workspace = true }
recloser = "1.3.1"
futures-util = "0.3.31"
typify = "0.6.0"
regress = "0.10.5"
lazy_static = { workspace = true }
async-dropper-simple = { version = "0.2.6", features = ["tokio", "no-default-bound"] }

[dev-dependencies]
mockito = { workspace = true }
