[package]
name = "query-plan-executor"
version = "0.0.1"
edition = "2021"

[lib]

[dependencies]
cyper = "0.4.0"
compio = { version = "0.15.0", features = ["macros"] }

async-trait = "0.1"
serde = "1.0.219"
serde_json = "1.0.140"
futures = "0.3"
query-planner = { path = "../query-planner" }
graphql-parser = "0.4.1"
graphql-tools = "0.4.0"
tracing = "0.1.41"
# TODO: Move this to dev-dependencies but currently benchmarks need it
async-graphql = { version = "7.0.17" }
http-body-util = "0.1.3"
http = "1.3.1"
sonic-rs = "0.5"
indexmap = "2.10.0"
url = "2.5.4"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports", "async"] }
subgraphs = { path = "../../bench/subgraphs" }
insta = { version = "1.42.1" }

[[bench]]
name = "executor_benches"
harness = false
