[package]
name = "query-plan-executor"
version = "0.0.1"
edition = "2021"

[lib]

[dependencies]
cyper = "0.4.0"
compio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3.31"
query-planner = { path = "../query-planner" }
graphql-parser = { workspace = true }
graphql-tools = { workspace = true }
tracing = { workspace = true }
# TODO: Move this to dev-dependencies but currently benchmarks need it
async-graphql = { version = "7.0.17" }
http = { workspace = true }
sonic-rs = { workspace = true }
indexmap = "2.10.0"
url = "2.5.4"

[dev-dependencies]
criterion = { workspace = true }
subgraphs = { path = "../../bench/subgraphs" }
insta = { workspace = true }

[[bench]]
name = "executor_benches"
harness = false
