[package]
name = "query-planner"
version = "0.0.1"
edition = "2021"

[lib]

[dependencies]
graphql-tools = { workspace = true }
graphql-parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
petgraph = "0.8.0"
bitflags = "2.9.1"
lazy-init = "0.5.1"
thiserror = { workspace = true }
rustc-hash = "2.1.1"

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }
lazy_static = { workspace = true }

[[bench]]
name = "qp_benches"
harness = false
