[package]
name = "hive-router-query-planner"
version = "0.0.1"
edition = "2021"
description = "GraphQL query planner for Federation specification"
license = "MIT"

[lib]

[dependencies]
graphql-tools = { workspace = true }
graphql-parser = { workspace = true }
serde = { workspace = true }
sonic-rs = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

petgraph = "0.8.2"
bitflags = "2.9.1"
lazy-init = "0.5.1"
rustc-hash = "2.1.1"

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }
lazy_static = { workspace = true }

[[bench]]
name = "qp_benches"
harness = false
