[package]
name = "hive-router-query-planner"
version = "2.0.2"
edition = "2021"
description = "GraphQL query planner for Federation specification"
license = "MIT"
publish = true
repository = "https://github.com/graphql-hive/router"
homepage = "https://github.com/graphql-hive/router"
authors = ["The Guild"]

[lib]

[dependencies]
graphql-tools = { workspace = true }
graphql-parser = { workspace = true }
serde = { workspace = true }
sonic-rs = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }

petgraph = "0.8.2"
bitflags = "2.9.1"
lazy-init = "0.5.1"
rustc-hash = "2.1.1"

# Optional NAPI support
napi = { version = "2.12.2" }
napi-derive = { version = "2.12.2" }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }
lazy_static = { workspace = true }

[[bench]]
name = "qp_benches"
harness = false
