[package]
name = "hive-router-config"
version = "0.0.1"
edition = "2021"
publish = true
license = "MIT"
description = "This is an internal crate used for managing the Hive Router configuration"
repository = "https://github.com/graphql-hive/router"
homepage = "https://github.com/graphql-hive/router"
authors = ["The Guild"]

[[bin]]
name = "config_schema_generator"
path = "src/config_schema_generator.rs"

[lib]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
schemars = "1.0.4"
config = { version = "0.15.14", features = ["yaml", "json", "json5"] }
