[package]
name = "hive-router-config"
version = "0.0.34"
edition = "2021"
publish = true
license = "MIT"
description = "This is an internal crate used for managing the Hive Router configuration"
repository = "https://github.com/graphql-hive/router"
homepage = "https://github.com/graphql-hive/router"
authors = ["The Guild"]

[[bin]]
name = "config_schema_generator"
path = "src/config_schema_generator.rs"

[lib]

[dependencies]
hive-console-sdk = { path = "../hive-console-sdk", version = "0.3.10" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }
http-serde = { workspace = true }
tonic = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
ipnet = { workspace = true }

schemars = { workspace = true }
url = { version = "2.5.8", features = ["serde"] }
humantime-serde = { workspace = true }
humantime = { workspace = true }
human-size = { version = "0.4.3" ,features = ["serde"] }
config = { version = "0.15.14", features = ["yaml", "json", "json5"] }
envconfig = "0.11.0"
