[package]
name = "incoming-request-deduplication-plugin-example"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["The Guild"]
repository = "https://github.com/graphql-hive/router"
homepage = "https://github.com/graphql-hive/router"
publish = false

[lib]

[[bin]]
name = "hive_router_with_incoming_request_deduplication"
path = "src/main.rs"

[dependencies]
hive-router = { version = "*", path = "../../bin/router" }
serde = { workspace = true }
xxhash-rust = {workspace = true}
futures = { workspace = true }
fibre = { version = "0.5.1"}

[dev-dependencies]
e2e = { version = "*", path = "../../e2e" }